<resources>
    <string name="app_name">Red List</string>
    <string name="app_description">This app is dedicated to inform people about threatened species of the world.</string>

    <string name="countries">Countries</string>
    <string name="message_error">Oops!\nSomething went wrong!</string>
    <string name="retry">Retry</string>
    <string name="species_list">Species list</string>
    <string name="species_list_pattern">%s species list</string>
    <string name="species_details">Species Details</string>
    <string name="taxonomic_notes">Taxonomic Notes</string>
    <string name="justification">Justification</string>
    <string name="geographic_range">Geographic Range</string>
    <string name="population">Population</string>
    <string name="habitat_and_ecology">Habitat &amp; Ecology</string>
    <string name="threats">Threats</string>
    <string name="conservation_actions">Conservation Actions</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="taxonomy">Taxonomy</string>
    <string name="kingdom">Kingdom</string>
    <string name="phylum">Phylum</string>
    <string name="label_class">Class</string>
    <string name="order">Order</string>
    <string name="family">Family</string>
    <string name="genus">Genus</string>
    <string name="vulnerability">Vulnerability</string>
    <string name="vulnerability_not_evaluated">Not Evaluated</string>
    <string name="vulnerability_data_deficient">Data deficient</string>
    <string name="vulnerability_least_concern">Least concern</string>
    <string name="vulnerability_near_threatened">Near threatened</string>
    <string name="vulnerability_vulnerable">Vulnerable</string>
    <string name="vulnerability_endangered">Endangered</string>
    <string name="vulnerability_critically_endangered">Critically endangered</string>
    <string name="vulnerability_extinct_in_the_wild">Extinct in the wild</string>
    <string name="vulnerability_extinct">Extinct</string>
    <string name="share">Share</string>
    <string name="greeting">Welcome</string>
    <string name="loading_countries">Loading country list</string>
    <string name="species_image_gallery">Species Image Gallery</string>
    <string name="search">Search</string>
    <string name="done">Done</string>
    <string name="input_country">Insert a country</string>
    <string name="cancel">Cancel</string>
    <string name="search_by">Search by</string>
    <string name="species_name">Species Name</string>
    <string name="pattern_hyphenated_text_pair">%s - %s</string>
    <string name="watch">Watch</string>
    <string name="unwatch">Unwatch</string>
    <string name="watching">Watching</string>
    <string name="error_no_internet">No internet connection</string>
</resources>
