<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/destinationCountries">

    <fragment
        android:id="@+id/destinationCountries"
        android:name="chetrari.vlad.rts.app.main.countries.CountriesFragment"
        android:label="@string/countries"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_destinationCountries_to_speciesListFragment"
            app:destination="@id/speciesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/speciesListFragment"
        android:name="chetrari.vlad.rts.app.main.species.SpeciesListFragment"
        android:label="@string/species_list"
        tools:layout="@layout/fragment_list">
        <argument
            android:name="country"
            android:defaultValue="@null"
            app:argType="chetrari.vlad.rts.data.persistence.model.Country"
            app:nullable="true" />
        <action
            android:id="@+id/action_speciesListFragment_to_speciesFragment"
            app:destination="@id/speciesFragment" />
        <argument
            android:name="vulnerability"
            android:defaultValue="@null"
            app:argType="chetrari.vlad.rts.data.persistence.type.Vulnerability"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/speciesFragment"
        android:name="chetrari.vlad.rts.app.main.species.details.SpeciesFragment"
        android:label="@string/species_details"
        tools:layout="@layout/fragment_species">
        <argument
            android:name="speciesId"
            app:argType="long" />
        <action
            android:id="@+id/action_speciesFragment_to_imageGalleryActivity"
            app:destination="@id/imageGalleryActivity" />
    </fragment>
    <activity
        android:id="@+id/imageGalleryActivity"
        android:name="chetrari.vlad.rts.app.main.images.ImageGalleryActivity"
        android:label="@string/species_image_gallery"
        tools:layout="@layout/activity_image_gallery">
        <argument
            android:name="images"
            app:argType="chetrari.vlad.rts.data.persistence.model.SpeciesImage[]" />
        <argument
            android:name="title"
            app:argType="string" />
    </activity>
    <fragment
        android:id="@+id/destinationVulnerabilityList"
        android:name="chetrari.vlad.rts.app.main.vulnerability.VulnerabilityListFragment"
        android:label="@string/vulnerability"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_destinationVulnerabilityList_to_speciesListFragment"
            app:destination="@id/speciesListFragment" />
    </fragment>
    <fragment
        android:id="@+id/destinationSearch"
        android:name="chetrari.vlad.rts.app.main.search.SpeciesSearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_species_search">
        <action
            android:id="@+id/action_destinationSearch_to_speciesFragment"
            app:destination="@id/speciesFragment" />
    </fragment>
    <fragment
        android:id="@+id/destinationWatching"
        android:name="chetrari.vlad.rts.app.main.watching.WatchingSpeciesFragment"
        android:label="@string/watching"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_watchingSpeciesFragment_to_speciesFragment"
            app:destination="@id/speciesFragment" />
    </fragment>
</navigation>