<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleGravity="bottom"
            app:expandedTitleTextAppearance="@style/AppTheme.ExpandedToolbarTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbarImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="@dimen/content_padding_medium">

                <chetrari.vlad.redlist.app.widget.KeyValuePairView
                    android:id="@+id/scientificName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:enlarged="true"
                    app:keyText="@string/scientific_name" />

                <chetrari.vlad.redlist.app.widget.KeyValuePairView
                    android:id="@+id/vulnerability"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:enlarged="true"
                    app:keyText="@string/vulnerability" />

                <chetrari.vlad.redlist.app.widget.KeyValuePairsParagraphView
                    android:id="@+id/taxonomy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/taxonomy" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/taxonomicNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/taxonomic_notes" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/justification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/justification" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/geographicRange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/geographic_range" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/population"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/population" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/habitatAndEcology"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/habitat_and_ecology" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/threats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/threats" />

                <chetrari.vlad.redlist.app.widget.ParagraphView
                    android:id="@+id/conservationActions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleText="@string/conservation_actions" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/content_padding_large"
            android:layout_marginTop="@dimen/content_padding_large"
            android:layout_marginBottom="@dimen/content_padding_large"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/watch"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:icon="@drawable/ic_visibility_on_white_24dp"
            app:iconTint="@android:color/white"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/webLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/content_padding_large"
            android:backgroundTint="@color/colorAccent"
            android:visibility="gone"
            app:icon="@drawable/ic_link_white_24dp"
            app:iconTint="@android:color/white"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>