<?xml version="1.0" encoding="utf-8"?><!--TODO update design-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_padding_large"
        android:layout_marginTop="@dimen/content_padding_large"
        android:layout_marginEnd="@dimen/content_padding_large"
        android:text="@string/search_by"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:textColor="@color/colorPrimaryDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/content_padding_large">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_padding_small"
                    android:hint="@string/species_name"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/content_padding_large" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding_medium"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/countries">

                        <AutoCompleteTextView
                            android:id="@+id/addCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/content_padding_large" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/countriesChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding_small"
                        android:paddingStart="@dimen/content_padding_medium"
                        android:paddingEnd="@dimen/content_padding_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/content_padding_medium"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vulnerability">

                        <AutoCompleteTextView
                            android:id="@+id/addVulnerability"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/content_padding_large" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/vulnerabilityChipGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding_small"
                        android:paddingStart="@dimen/content_padding_medium"
                        android:paddingEnd="@dimen/content_padding_medium" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?selectableItemBackground"
                    android:padding="@dimen/content_padding_large"
                    android:text="@string/cancel"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                <TextView
                    android:id="@+id/confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?selectableItemBackground"
                    android:padding="@dimen/content_padding_large"
                    android:text="@string/done"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>